# marker-desktop

./: package-lock.json  package.json  vite.config.js
.github/workflows/: build.yml
src/: App.jsx  main.jsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: lib.rs
src-tauri/src/jsonrpc/: mod.rs  repository.rs  server.rs
