[package]
name = "marker-desktop"
version = "0.1.5"
description = "Marker Desktop is a bookmark manager"
authors = ["Wisnu Box"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "test_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = "1.52.3"
jsonrpsee = { version = "0.26.0", features = ["macros", "server"] }
tower = "0.5.3"
rusqlite = { version = "0.40.1", features = ["bundled"] }
hyper = "1.10.1"
tower-http = { version = "0.7.0", features = ["cors"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
dirs = "6.0.0"

